@@ -1,4 +1,5 @@
 5.1
+ * Add cluster metadata id to gossip syn messages (CASSANDRA-19613)
  * Reduce heap usage occupied by the metrics (CASSANDRA-19567)
  * Improve handling of transient replicas during range movements (CASSANDRA-19344)
  * Enable debounced internode log requests to be cancelled at shutdown (CASSANDRA-19514)
